--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -101,12 +101,6 @@
     "second": "ثانية",
     "seconds": "ثواني"
   },
-  "transactionPage": {
-    "filterBar": {
-      "search": "بحث",
-      "doneBtn": "تم"
-    }
-  },
   "payment_provider": {
     "all": "الكل",
     "checkout": "تشاك آوت",
@@ -204,12 +198,25 @@
     "transaction_date_time": "تاريخ ووقت المعاملة",
     "response_detail": "تفاصيل الاستجابة"
   },
-    "advance-payment_snackbar":{
-    "advance-payment-loaded":"تم تحميل بيانات الدفع المسبق بنجاح",
-    "link_copied_success":"تم نسخ الرابط بنجاح",
-    "failed_to_copy":"فشل في نسخ الرابط"
+  "advance-payment_snackbar": {
+    "advance-payment-loaded": "تم تحميل بيانات الدفع المسبق بنجاح",
+    "link_copied_success": "تم نسخ الرابط بنجاح",
+    "failed_to_copy": "فشل في نسخ الرابط",
+    "first_name_validation": "الاسم الأول مطلوب",
+    "last_name_validation": "اسم العائلة مطلوب",
+    "email_validation": "البريد الإلكتروني مطلوب",
+    "phone_validation": "رقم الهاتف مطلوب",
+    "country_validation": "البلد مطلوب",
+    "city_validation": "المدينة مطلوبة",
+    "zip_code_validation": "الرمز البريدي مطلوب",
+    "amount_validation": "المبلغ مطلوب",
+    "currency_validation": "العملة مطلوبة",
+    "address_validation": "العنوان مطلوب",
+    "description_validation": "الوصف مطلوب",
+    "advance_payment_added": "تم حفظ إدخال الدفع المسبق بنجاح",
+    "advance_payment_updated": "تم تحديث الدفع المسبق بنجاح"
   },
-    "advance-payment_table":{
+  "advance-payment_table": {
     "headers": {
       "transaction_id": "معرّف المعاملة",
       "name": "الاسم",
@@ -220,13 +227,66 @@
       "transaction_date_time": "تاريخ ووقت المعاملة",
       "action": "الإجراء"
     },
-    "copy":"نسخ",
+    "copy": "نسخ",
     "edit": "تعديل",
-    "generate_link": "إنشاء الرابط"
+    "generate_link": "إنشاء الرابط",
+    "add_payment_popup": {
+      "title": "الدفع المسبق",
+      "first_name": "الاسم الأول",
+      "first_name_placeholder": "أدخل الاسم الأول",
+      "last_name": "اسم العائلة",
+      "last_name_placeholder": "أدخل اسم العائلة",
+      "email": "البريد الإلكتروني",
+      "email_placeholder": "أدخل البريد الإلكتروني",
+      "phone": "رقم الهاتف",
+      "phone_placeholder": "أدخل رقم الهاتف",
+      "country": "البلد",
+      "country_placeholder": "اختر البلد",
+      "city": "المدينة",
+      "city_placeholder": "أدخل اسم المدينة",
+      "zip_code": "الرمز البريدي",
+      "zip_code_placeholder": "أدخل الرمز البريدي",
+      "amount": "المبلغ",
+      "amount_placeholder": "أدخل المبلغ",
+      "currency": "العملة",
+      "currency_placeholder": "اختر العملة",
+      "address": "العنوان",
+      "address_placeholder": "أدخل العنوان",
+      "description": "الوصف",
+      "description_placeholder": "اكتب شيئاً...",
+      "close": "إغلاق",
+      "save": "حفظ"
+    }
   },
+   "reconciliationReportPage": {
+    "empty_config_desc": "لعرض تقرير التسوية، يرجى إكمال التكوين في الإعدادات.",
+    "go_to_settings": "الذهاب إلى إعدادات التكوين",
+    "alert_message": "لا يمكن استخراج بيانات لأكثر من 7 أيام (على حجم كبير من الطلبات يرجى استخراج طلب ليوم واحد)",
+    "table":{
+      "title":"بيانات علامة تبويب تقرير التسوية",
+      "order_no":"رقم الطلب",
+      "transaction_id":"معرّف المعاملة",
+      "email":"البريد الإلكتروني",
+      "payment_session":"جلسة الدفع",
+      "payment_source":"مصدر الدفع",
+      "amount":"المبلغ",
+      "order_amount":"مبلغ الطلب"
+     },
+     "download_csv": "تحميل CSV"
+   },
+   "reconciliation_report_snackbar": {
+    "data_loaded":"تم تحميل بيانات تقرير التسوية بنجاح",
+    "invalid_date":"لا يمكن استخراج البيانات لأكثر من 7 أيام",
+    "file_error":"حدث خطأ أثناء تنزيل ملف CSV. يرجى المحاولة مرة أخرى.",
+     "report_downloaded":"تم تنزيل تقرير التسوية بنجاح"
+   },
   "$vuetify": {
     "open": "فتح",
     "close": "إغلاق",
+    "doneBtn": "تم",
+    "search": "بحث",
+    "date_range_placeholder": "اختر نطاق التاريخ",
+    "no_data_available": "لا توجد بيانات متاحة",
     "loading": "جاري التحميل...",
     "noDataText": "لا توجد سجلات",
     "dataFooter": {
@@ -255,5 +315,250 @@
     "table": {
       "title": "قائمة الدفعات المقدمة"
     }
+  },
+  "countries": {
+    "AF": "أفغانستان",
+    "AX": "جزر أولاند",
+    "AL": "ألبانيا",
+    "DZ": "الجزائر",
+    "AS": "ساموا الأمريكية",
+    "AD": "أندورا",
+    "AO": "أنغولا",
+    "AI": "أنغويلا",
+    "AQ": "أنتاركتيكا",
+    "AG": "أنتيغوا وبربودا",
+    "AR": "الأرجنتين",
+    "AM": "أرمينيا",
+    "AW": "أروبا",
+    "AU": "أستراليا",
+    "AT": "النمسا",
+    "AZ": "أذربيجان",
+    "BS": "جزر الباهاما",
+    "BH": "البحرين",
+    "BD": "بنغلاديش",
+    "BB": "بربادوس",
+    "BY": "بيلاروس",
+    "BE": "بلجيكا",
+    "BZ": "بليز",
+    "BJ": "بنين",
+    "BM": "برمودا",
+    "BT": "بوتان",
+    "BO": "بوليفيا",
+    "BA": "البوسنة والهرسك",
+    "BW": "بوتسوانا",
+    "BV": "جزيرة بوفيه",
+    "BR": "البرازيل",
+    "IO": "إقليم المحيط الهندي البريطاني",
+    "BN": "بروناي",
+    "BG": "بلغاريا",
+    "BF": "بوركينا فاسو",
+    "BI": "بوروندي",
+    "KH": "كمبوديا",
+    "CM": "الكاميرون",
+    "CA": "كندا ",
+    "CV": "الرأس الأخضر",
+    "KY": "جزر كايمان",
+    "CF": "جمهورية أفريقيا الوسطى",
+    "TD": "تشاد",
+    "CL": "تشيلي",
+    "CN": "الصين",
+    "CX": "جزيرة الكريسماس",
+    "CC": "جزر كوكوس (كيلينغ)",
+    "CO": "كولومبيا",
+    "KM": "جزر القمر",
+    "CG": "الكونغو",
+    "CD": "الكونغو، جمهورية أفريقيا الديمقراطية",
+    "CK": "جزر كوك",
+    "CR": "كوستاريكا",
+    "CI": "ساحل العاج",
+    "HR": "كرواتيا",
+    "CU": "كوبا",
+    "CY": "قبرص",
+    "CZ": "الجمهورية التشيكية",
+    "DK": "الدنمارك",
+    "DJ": "جيبوتي",
+    "DM": "دومينيكا",
+    "DO": "جمهورية الدومينيكان",
+    "EC": "الإكوادور",
+    "EG": "مصر",
+    "SV": "السلفادور",
+    "GQ": "غينيا الاستوائية",
+    "ER": "إريتريا",
+    "EE": "إستونيا",
+    "ET": "إثيوبيا",
+    "FK": "جزر فوكلاند (مالفيناس)",
+    "FO": "جزر فارو",
+    "FJ": "فيجي",
+    "FI": "فنلندا",
+    "FR": "فرنسا",
+    "GF": "غيانا الفرنسية",
+    "PF": "بولينيزيا الفرنسية",
+    "TF": "أراضي جنوبية فرنسية",
+    "GA": "الغابون",
+    "GM": "غامبيا",
+    "GE": "جورجيا",
+    "DE": "ألمانيا",
+    "GH": "غانا",
+    "GI": "جبل طارق",
+    "GR": "اليونان",
+    "GL": "جرينلاند",
+    "GD": "غرينادا",
+    "GP": "غوادلوب",
+    "GU": "غوام",
+    "GT": "غواتيمالا",
+    "GG": "غيرنزي",
+    "GN": "غينيا",
+    "GW": "غينيا بيساو",
+    "GY": "غيانا",
+    "HT": "هايتي",
+    "HM": "جزيرة هيرد وجزر ماكدونالد",
+    "VA": "الفاتيكان",
+    "HN": "هندوراس",
+    "HK": "هونغ كونغ",
+    "HU": "المجر",
+    "IS": "آيسلندا",
+    "IN": "الهند",
+    "ID": "إندونيسيا",
+    "IR": "إيران، جمهورية إيران الإسلامية",
+    "IQ": "العراق",
+    "IE": "أيرلندا",
+    "IM": "جزيرة مان",
+    "IL": "إسرائيل",
+    "IT": "إيطاليا",
+    "JM": "جامايكا",
+    "JP": "اليابان",
+    "JE": "جيرسي",
+    "JO": "الأردن",
+    "KZ": "كازاخستان",
+    "KE": "كينيا",
+    "KI": "كيريباتي",
+    "KP": "كوريا، جمهورية كوريا الديمقراطية الشعبية",
+    "KR": "كوريا، جمهورية كوريا",
+    "KW": "الكويت",
+    "KG": "قيرغيزستان",
+    "LA": "جمهورية لاو الديمقراطية الشعبية",
+    "LV": "لاتفيا",
+    "LB": "لبنان",
+    "LS": "ليسوتو",
+    "LR": "ليبيريا",
+    "LY": "الجماهيرية العربية الليبية",
+    "LI": "ليختنشتاين",
+    "LT": "ليتوانيا",
+    "LU": "لوكسمبورغ",
+    "MO": "ماكاو",
+    "MK": "مقدونيا، جمهورية مقدونيا السابقة اليوغوسلافية",
+    "MG": "مدغشقر",
+    "MW": "مالاوي",
+    "MY": "ماليزيا",
+    "MV": "جزر المالديف",
+    "ML": "مالي",
+    "MT": "مالطا",
+    "MH": "جزر مارشال",
+    "MQ": "مارتينيك",
+    "MR": "موريتانيا",
+    "MU": "موريشيوس",
+    "YT": "مايوت",
+    "MX": "المكسيك",
+    "FM": "ولايات ميكرونيزيا الموحدة",
+    "MD": "مولدوفا، جمهورية مولدوفا",
+    "MC": "موناكو",
+    "MN": "منغوليا",
+    "MS": "مونتسرات",
+    "MA": "المغرب",
+    "MZ": "موزمبيق",
+    "MM": "ميانمار",
+    "NA": "ناميبيا",
+    "NR": "ناورو",
+    "NP": "نيبال",
+    "NL": "هولندا",
+    "AN": "جزر الأنتيل الهولندية",
+    "NC": "نيوزيلندا",
+    "NZ": "نيوزيلندا",
+    "NI": "نيكاراغوا",
+    "NE": "النيجر",
+    "NG": "نيجيريا",
+    "NU": "نيوي",
+    "NF": "جزيرة نورفولك",
+    "MP": "جزر مارشال",
+    "NO": "النرويج",
+    "OM": "عُمان",
+    "PK": "باكستان",
+    "PW": "بالاو",
+    "PS": "فلسطين، الدولة الفلسطينية",
+    "PA": "بنما",
+    "PG": "بابوا غينيا الجديدة",
+    "PY": "باراغواي",
+    "PE": "بيرو",
+    "PH": "الفلبين",
+    "PN": "بيتكيرن",
+    "PL": "بولندا",
+    "PT": "البرتغال",
+    "PR": "بورتوريكو",
+    "QA": "قطر",
+    "RE": "ريونيون",
+    "RO": "رومانيا",
+    "RU": "الاتحاد الروسي",
+    "RW": "رواندا",
+    "SH": "سانت هيلينا",
+    "KN": "سانت كيتس ونيفيس",
+    "LC": "سانت لوسيا",
+    "PM": "سانت بيير وميكلون",
+    "VC": "سانت فينسنت والغرينادين",
+    "WS": "ساموا",
+    "SM": "سان مارينو",
+    "ST": "ساو تومي وبرينسيبي",
+    "SA": "السعودية",
+    "SN": "السنغال",
+    "CS": "صربيا والجبل الأسود",
+    "SC": "سيشل",
+    "SL": "سيراليون",
+    "SG": "سنغافورة",
+    "SK": "سلوفاكيا",
+    "SI": "سلوفينيا",
+    "SB": "جزر سليمان",
+    "SO": "الصومال",
+    "ZA": "جنوب أفريقيا",
+    "GS": "جورجيا الجنوبية وجزر ساندويتش الجنوبية",
+    "ES": "إسبانيا",
+    "LK": "سريلانكا",
+    "SD": "السودان",
+    "SR": "سورينام",
+    "SJ": "سفالبارد وجان ماين",
+    "SZ": "سوازيلاند",
+    "SE": "السويد",
+    "CH": "سويسرا",
+    "SY": "الجمهورية العربية السورية",
+    "TW": "تايوان، مقاطعة الصين",
+    "TJ": "طاجيكستان",
+    "TZ": "تنزانيا، جمهورية تنزانيا المتحدة",
+    "TH": "تايلاند",
+    "TL": "تيمور الشرقية",
+    "TG": "توغو",
+    "TK": "توكيلاو",
+    "TO": "تونغا",
+    "TT": "ترينيداد وتوباغو",
+    "TN": "تونس",
+    "TR": "تركيا",
+    "TM": "تركمانستان",
+    "TC": "جزر توركس وكايكوس",
+    "TV": "توفالو",
+    "UG": "أوغندا",
+    "UA": "أوكرانيا",
+    "AE": "الإمارات العربية المتحدة",
+    "GB": "المملكة المتحدة",
+    "US": "الولايات المتحدة الأمريكية",
+    "UM": "جزر الولايات المتحدة البعيدة الصغرى",
+    "UY": "أوروغواي",
+    "UZ": "أوزبكستان",
+    "VU": "فانواتو",
+    "VE": "فنزويلا",
+    "VN": "فيتنام",
+    "VG": "جزر فيرجن، بريطانيا",
+    "VI": "جزر فيرجن، الولايات المتحدة",
+    "WF": "جزر واليس وفوتونا",
+    "EH": "الصحراء الغربية",
+    "YE": "اليمن",
+    "ZM": "زامبيا",
+    "ZW": "زيمبابوي"
   }
 }
