--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -80,13 +80,13 @@
   "payment_providers": {
     "title": "Payment Providers",
     "desc": "Configured payment service providers.",
-    "button":"Manage",
-    "transactions":"transactions",
-    "unumpay-charges":"Unumpay Charges",
-    "Active":"Active",
-    "Inactive":"Inactive"
+    "button": "Manage",
+    "transactions": "transactions",
+    "unumpay-charges": "Unumpay Charges",
+    "Active": "Active",
+    "Inactive": "Inactive"
   },
-"time": {
+  "time": {
     "ago": "ago",
     "day": "day",
     "days": "days",
@@ -101,14 +101,8 @@
     "second": "second",
     "seconds": "seconds"
   },
-  "transactionPage":{
-     "filterBar":{
-       "search":"Search",
-       "doneBtn":"Done"
-     }
-  },
   "payment_provider": {
-    "all":"all",
+    "all": "all",
     "checkout": "Checkout.com",
     "apg": "Alfalah (APG)",
     "baf": "Alfalah (MPGS)",
@@ -148,12 +142,12 @@
     "ccbill": "CCBILL",
     "paytab": "PAYTAB",
     "tabpay": "TAP Payments",
-    "assanpay":"Assan Pay",
+    "assanpay": "Assan Pay",
     "dialogpay": "Dialog Pay",
     "directpay": "Direct Pay",
-    "null":"-"
+    "null": "-"
   },
-  "status":{
+  "status": {
     "all": "all",
     "success": "success",
     "pending": "pending",
@@ -165,23 +159,23 @@
     "pending_report_csv": "Pending report CSV",
     "card_report_csv": "Card report CSV",
     "billing_report_csv": "Billing report CSV"
- },
- "transaction_stats":{
+  },
+  "transaction_stats": {
     "successful": "Successful Transaction",
     "in_progress": "In Progress Transaction",
     "failed": "Failed Transaction"
- },
- "transaction_snackbar":{
-    "invalid_date":"Invalid date range",
+  },
+  "transaction_snackbar": {
+    "invalid_date": "Invalid date range",
     "data_loaded": "Data loaded successfully",
-    "transaction_activity_report":"Transaction activities report downloaded successfully",
-    "transaction_pending _report":"Transaction pending report downloaded successfully",
-    "transaction_card _report":"Transaction card report downloaded successfully",
-    "transaction_billing _report":"Transaction billing report downloaded successfully"
- },
- "transaction_table":{
-    "title":"Transactions",
-    "charges":"Unumpay Charges",
+    "transaction_activity_report": "Transaction activities report downloaded successfully",
+    "transaction_pending _report": "Transaction pending report downloaded successfully",
+    "transaction_card _report": "Transaction card report downloaded successfully",
+    "transaction_billing _report": "Transaction billing report downloaded successfully"
+  },
+  "transaction_table": {
+    "title": "Transactions",
+    "charges": "Unumpay Charges",
     "headers": {
       "transaction_id": "Transaction ID",
       "name": "Name",
@@ -194,22 +188,35 @@
     },
     "items_per_page": "Items per page",
     "of": "of"
- },
- "transaction_popup":{
-    "title":"Transactions Details",
-    "transaction_id":"Transaction ID",
-    "response_code":"Response Code",
-    "payment_session_id":"Payment Session ID",
-    "payment_provider":"Payment Provider",
-    "transaction_date_time":"Transaction Date Time",
-    "response_detail":"Response Detail"
   },
-  "advance-payment_snackbar":{
-    "advance-payment-loaded":"Advance payment data loaded successfully",
-    "link_copied_success":"Link copied successfully",
-    "failed_to_copy":"Failed to copy link"
+  "transaction_popup": {
+    "title": "Transactions Details",
+    "transaction_id": "Transaction ID",
+    "response_code": "Response Code",
+    "payment_session_id": "Payment Session ID",
+    "payment_provider": "Payment Provider",
+    "transaction_date_time": "Transaction Date Time",
+    "response_detail": "Response Detail"
   },
-   "advance-payment_table":{
+  "advance-payment_snackbar": {
+    "advance-payment-loaded": "Advance payment data loaded successfully",
+    "link_copied_success": "Link copied successfully",
+    "failed_to_copy": "Failed to copy link",
+    "first_name_validation": "First name is required",
+    "last_name_validation": "Last name is required",
+    "email_validation": "Valid email is required",
+    "phone_validation": "Phone number is required",
+    "country_validation": "Country is required",
+    "city_validation": "City is required",
+    "zip_code_validation": "Zip code is required",
+    "amount_validation": "Amount must be greater than 0",
+    "currency_validation": "Currency is required",
+    "address_validation": "Address is required",
+    "description_validation": "Description is required",
+    "advance_payment_added": "Advance Payment Entry Saved Successfully",
+    "advance_payment_updated": "Advance payment updated successfully"
+  },
+  "advance-payment_table": {
     "headers": {
       "transaction_id": "Transaction ID",
       "name": "Name",
@@ -220,25 +227,78 @@
       "transaction_date_time": "Transaction Date Time",
       "action": "Action"
     },
-    "copy":"Copy",
-    "edit":"Edit",
-    "generate_link":"Generate Link"
+    "copy": "Copy",
+    "edit": "Edit",
+    "generate_link": "Generate Link",
+    "add_payment_popup": {
+      "title": "Advance Payment",
+      "first_name": "First Name",
+      "first_name_placeholder": "Please Enter First Name",
+      "last_name": "Last Name",
+      "last_name_placeholder": "Please Enter Last Name",
+      "email": "Email",
+      "email_placeholder": "Please Enter Email",
+      "phone": "Phone number",
+      "phone_placeholder": "Please enter phone number",
+      "country": "Country",
+      "country_placeholder": "Please select country",
+      "city": "City",
+      "city_placeholder": "Please enter city name",
+      "zip_code": "Zip Code",
+      "zip_code_placeholder": "Please enter zip code",
+      "amount": "Amount",
+      "amount_placeholder": "Please enter amount",
+      "currency": "Currency",
+      "currency_placeholder": "Please select currency",
+      "address": "Address",
+      "address_placeholder": "Please enter address",
+      "description": "Description",
+      "description_placeholder": "Write something...",
+      "close": "Close",
+      "save": "Save"
+    }
+  },
+  "reconciliationReportPage": {
+    "empty_config_desc": "To view the reconciliation report, please complete the configuration in Settings.",
+    "go_to_settings": "Go To Configuration Setting",
+    "alert_message": "Can't extract data of more than 7 days (On huge volume of orders please extract order of single day)",
+    "table":{
+      "title":"Reconciliation Report Tab Data",
+      "order_no":"Order No",
+      "transaction_id":"Transaction ID",
+      "email":"Email",
+      "payment_session":"Payment Session",
+      "payment_source":"Payment Source",
+      "amount":"Amount",
+      "order_amount":"Order Amount"
+    },
+    "download_csv":"Download CSV"
+  },
+  "reconciliation_report_snackbar": {
+    "data_loaded": "Reconciliation report data loaded successfully",
+    "invalid_date":"Can't Extract data of more than 7 days",
+    "file_error":"Can't Extract data of more than 7 days",
+    "report_downloaded":"Reconciliation report downloaded successfully"
   },
   "$vuetify": {
     "open": "Open",
     "close": "Close",
+    "doneBtn": "Done",
+    "search": "Search",
+    "date_range_placeholder": "Select date range",
+    "no_data_available": "No record found",
     "loading": "Loading...",
-    "noDataText":"No record found",
+    "noDataText": "No record found",
     "dataFooter": {
       "itemsPerPageText": "Items per page:",
       "pageText": "{0}-{1} of {2}",
-      "itemsPerPageAll":"All",
+      "itemsPerPageAll": "All",
       "firstPage": "First page",
       "lastPage": "Last page",
       "nextPage": "Next page",
       "prevPage": "Previous page"
     },
-     "pagination": {
+    "pagination": {
       "ariaLabel": {
         "root": "Pagination Navigation",
         "next": "Next page",
@@ -247,15 +307,258 @@
       }
     }
   },
-  "advance_payment":{
-     "filter":{
-        "button1":"demo",
-        "button2":"Advance Payment"
-     },
-     "table":{
-       "title":"Advance Payment List"
-     }
+  "advance_payment": {
+    "filter": {
+      "button1": "demo",
+      "button2": "Advance Payment"
+    },
+    "table": {
+      "title": "Advance Payment List"
+    }
+  },
+  "countries": {
+    "AF": "Afghanistan",
+    "AX": "Åland Islands",
+    "AL": "Albania",
+    "DZ": "Algeria",
+    "AS": "American Samoa",
+    "AD": "AndorrA",
+    "AO": "Angola",
+    "AI": "Anguilla",
+    "AQ": "Antarctica",
+    "AG": "Antigua and Barbuda",
+    "AR": "Argentina",
+    "AM": "Armenia",
+    "AW": "Aruba",
+    "AU": "Australia",
+    "AT": "Austria",
+    "AZ": "Azerbaijan",
+    "BS": "Bahamas",
+    "BH": "Bahrain",
+    "BD": "Bangladesh",
+    "BB": "Barbados",
+    "BY": "Belarus",
+    "BE": "Belgium",
+    "BZ": "Belize",
+    "BJ": "Benin",
+    "BM": "Bermuda",
+    "BT": "Bhutan",
+    "BO": "Bolivia",
+    "BA": "Bosnia and Herzegovina",
+    "BW": "Botswana",
+    "BV": "Bouvet Island",
+    "BR": "Brazil",
+    "IO": "British Indian Ocean Territory",
+    "BN": "Brunei Darussalam",
+    "BG": "Bulgaria",
+    "BF": "Burkina Faso",
+    "BI": "Burundi",
+    "KH": "Cambodia",
+    "CM": "Cameroon",
+    "CA": "Canada",
+    "CV": "Cape Verde",
+    "KY": "Cayman Islands",
+    "CF": "Central African Republic",
+    "TD": "Chad",
+    "CL": "Chile",
+    "CN": "China",
+    "CX": "Christmas Island",
+    "CC": "Cocos (Keeling) Islands",
+    "CO": "Colombia",
+    "KM": "Comoros",
+    "CG": "Congo",
+    "CD": "Congo, The Democratic Republic of the",
+    "CK": "Cook Islands",
+    "CR": "Costa Rica",
+    "CI": "Cote D'Ivoire",
+    "HR": "Croatia",
+    "CU": "Cuba",
+    "CY": "Cyprus",
+    "CZ": "Czech Republic",
+    "DK": "Denmark",
+    "DJ": "Djibouti",
+    "DM": "Dominica",
+    "DO": "Dominican Republic",
+    "EC": "Ecuador",
+    "EG": "Egypt",
+    "SV": "El Salvador",
+    "GQ": "Equatorial Guinea",
+    "ER": "Eritrea",
+    "EE": "Estonia",
+    "ET": "Ethiopia",
+    "FK": "Falkland Islands (Malvinas)",
+    "FO": "Faroe Islands",
+    "FJ": "Fiji",
+    "FI": "Finland",
+    "FR": "France",
+    "GF": "French Guiana",
+    "PF": "French Polynesia",
+    "TF": "French Southern Territories",
+    "GA": "Gabon",
+    "GM": "Gambia",
+    "GE": "Georgia",
+    "DE": "Germany",
+    "GH": "Ghana",
+    "GI": "Gibraltar",
+    "GR": "Greece",
+    "GL": "Greenland",
+    "GD": "Grenada",
+    "GP": "Guadeloupe",
+    "GU": "Guam",
+    "GT": "Guatemala",
+    "GG": "Guernsey",
+    "GN": "Guinea",
+    "GW": "Guinea-Bissau",
+    "GY": "Guyana",
+    "HT": "Haiti",
+    "HM": "Heard Island and Mcdonald Islands",
+    "VA": "Holy See (Vatican City State)",
+    "HN": "Honduras",
+    "HK": "Hong Kong",
+    "HU": "Hungary",
+    "IS": "Iceland",
+    "IN": "India",
+    "ID": "Indonesia",
+    "IR": "Iran, Islamic Republic Of",
+    "IQ": "Iraq",
+    "IE": "Ireland",
+    "IM": "Isle of Man",
+    "IL": "Israel",
+    "IT": "Italy",
+    "JM": "Jamaica",
+    "JP": "Japan",
+    "JE": "Jersey",
+    "JO": "Jordan",
+    "KZ": "Kazakhstan",
+    "KE": "Kenya",
+    "KI": "Kiribati",
+    "KP": "Korea, Democratic People's Republic of",
+    "KR": "Korea, Republic of",
+    "KW": "Kuwait",
+    "KG": "Kyrgyzstan",
+    "LA": "Lao People's Democratic Republic",
+    "LV": "Latvia",
+    "LB": "Lebanon",
+    "LS": "Lesotho",
+    "LR": "Liberia",
+    "LY": "Libyan Arab Jamahiriya",
+    "LI": "Liechtenstein",
+    "LT": "Lithuania",
+    "LU": "Luxembourg",
+    "MO": "Macao",
+    "MK": "Macedonia, The Former Yugoslav Republic of",
+    "MG": "Madagascar",
+    "MW": "Malawi",
+    "MY": "Malaysia",
+    "MV": "Maldives",
+    "ML": "Mali",
+    "MT": "Malta",
+    "MH": "Marshall Islands",
+    "MQ": "Martinique",
+    "MR": "Mauritania",
+    "MU": "Mauritius",
+    "YT": "Mayotte",
+    "MX": "Mexico",
+    "FM": "Micronesia, Federated States of",
+    "MD": "Moldova, Republic of",
+    "MC": "Monaco",
+    "MN": "Mongolia",
+    "MS": "Montserrat",
+    "MA": "Morocco",
+    "MZ": "Mozambique",
+    "MM": "Myanmar",
+    "NA": "Namibia",
+    "NR": "Nauru",
+    "NP": "Nepal",
+    "NL": "Netherlands",
+    "AN": "Netherlands Antilles",
+    "NC": "New Caledonia",
+    "NZ": "New Zealand",
+    "NI": "Nicaragua",
+    "NE": "Niger",
+    "NG": "Nigeria",
+    "NU": "Niue",
+    "NF": "Norfolk Island",
+    "MP": "Northern Mariana Islands",
+    "NO": "Norway",
+    "OM": "Oman",
+    "PK": "Pakistan",
+    "PW": "Palau",
+    "PS": "Palestinian Territory, Occupied",
+    "PA": "Panama",
+    "PG": "Papua New Guinea",
+    "PY": "Paraguay",
+    "PE": "Peru",
+    "PH": "Philippines",
+    "PN": "Pitcairn",
+    "PL": "Poland",
+    "PT": "Portugal",
+    "PR": "Puerto Rico",
+    "QA": "Qatar",
+    "RE": "Reunion",
+    "RO": "Romania",
+    "RU": "Russian Federation",
+    "RW": "RWANDA",
+    "SH": "Saint Helena",
+    "KN": "Saint Kitts and Nevis",
+    "LC": "Saint Lucia",
+    "PM": "Saint Pierre and Miquelon",
+    "VC": "Saint Vincent and the Grenadines",
+    "WS": "Samoa",
+    "SM": "San Marino",
+    "ST": "Sao Tome and Principe",
+    "SA": "Saudi Arabia",
+    "SN": "Senegal",
+    "CS": "Serbia and Montenegro",
+    "SC": "Seychelles",
+    "SL": "Sierra Leone",
+    "SG": "Singapore",
+    "SK": "Slovakia",
+    "SI": "Slovenia",
+    "SB": "Solomon Islands",
+    "SO": "Somalia",
+    "ZA": "South Africa",
+    "GS": "South Georgia and the South Sandwich Islands",
+    "ES": "Spain",
+    "LK": "Sri Lanka",
+    "SD": "Sudan",
+    "SR": "Suriname",
+    "SJ": "Svalbard and Jan Mayen",
+    "SZ": "Swaziland",
+    "SE": "Sweden",
+    "CH": "Switzerland",
+    "SY": "Syrian Arab Republic",
+    "TW": "Taiwan, Province of China",
+    "TJ": "Tajikistan",
+    "TZ": "Tanzania, United Republic of",
+    "TH": "Thailand",
+    "TL": "Timor-Leste",
+    "TG": "Togo",
+    "TK": "Tokelau",
+    "TO": "Tonga",
+    "TT": "Trinidad and Tobago",
+    "TN": "Tunisia",
+    "TR": "Turkey",
+    "TM": "Turkmenistan",
+    "TC": "Turks and Caicos Islands",
+    "TV": "Tuvalu",
+    "UG": "Uganda",
+    "UA": "Ukraine",
+    "AE": "United Arab Emirates",
+    "GB": "United Kingdom",
+    "US": "United States",
+    "UM": "United States Minor Outlying Islands",
+    "UY": "Uruguay",
+    "UZ": "Uzbekistan",
+    "VU": "Vanuatu",
+    "VE": "Venezuela",
+    "VN": "Viet Nam",
+    "VG": "Virgin Islands, British",
+    "VI": "Virgin Islands, U.S.",
+    "WF": "Wallis and Futuna",
+    "EH": "Western Sahara",
+    "YE": "Yemen",
+    "ZM": "Zambia",
+    "ZW": "Zimbabwe"
   }
-
-
 }
