--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -101,12 +101,6 @@
     "second": "seconde",
     "seconds": "secondes"
   },
-  "transactionPage": {
-    "filterBar": {
-      "search": "Rechercher",
-      "doneBtn": "Terminé"
-    }
-  },
   "payment_provider": {
     "all": "Tout",
     "checkout": "Checkout.com",
@@ -204,12 +198,25 @@
     "transaction_date_time": "Date et heure de la transaction",
     "response_detail": "Détail de la réponse"
   },
-  "advance-payment_snackbar":{
-    "advance-payment-loaded":"Données de paiement anticipé chargées avec succès",
-    "link_copied_success":"Lien copié avec succès",
-     "failed_to_copy":"Échec de la copie du lien"
+  "advance-payment_snackbar": {
+    "advance-payment-loaded": "Données de paiement anticipé chargées avec succès",
+    "link_copied_success": "Lien copié avec succès",
+    "failed_to_copy": "Échec de la copie du lien",
+    "first_name_validation": "Le prénom est requis",
+    "last_name_validation": "Le nom de famille est requis",
+    "email_validation": "L'email est requis",
+    "phone_validation": "Le téléphone est requis",
+    "country_validation": "Le pays est requis",
+    "city_validation": "La ville est requise",
+    "zip_code_validation": "Le code postal est requis",
+    "amount_validation": "Le montant est requis",
+    "currency_validation": "La devise est requise",
+    "address_validation": "L'adresse est requise",
+    "description_validation": "La description est requise",
+    "advance_payment_added": "Entrée de paiement anticipé enregistrée avec succès",
+    "advance_payment_updated": "Paiement anticipé mis à jour avec succès"
   },
-  "advance-payment_table":{
+  "advance-payment_table": {
     "headers": {
       "transaction_id": "ID de transaction",
       "name": "Nom",
@@ -220,17 +227,70 @@
       "transaction_date_time": "Date et heure de la transaction",
       "action": "Action"
     },
-    "copy":"Copier",
+    "copy": "Copier",
     "edit": "Modifier",
-    "generate_link": "Générer le lien"
+    "generate_link": "Générer le lien",
+    "add_payment_popup": {
+      "title": "Paiement anticipé",
+      "first_name": "Prénom",
+      "first_name_placeholder": "Veuillez entrer le prénom",
+      "last_name": "Nom de famille",
+      "last_name_placeholder": "Veuillez entrer le nom de famille",
+      "email": "Email",
+      "email_placeholder": "Veuillez entrer l'email",
+      "phone": "Téléphone",
+      "phone_placeholder": "Veuillez entrer le numéro de téléphone",
+      "country": "Pays",
+      "country_placeholder": "Veuillez sélectionner le pays",
+      "city": "Ville",
+      "city_placeholder": "Veuillez entrer le nom de la ville",
+      "zip_code": "Code postal",
+      "zip_code_placeholder": "Veuillez entrer le code postal",
+      "amount": "Montant",
+      "amount_placeholder": "Veuillez entrer le montant",
+      "currency": "Devise",
+      "currency_placeholder": "Veuillez sélectionner la devise",
+      "address": "Adresse",
+      "address_placeholder": "Veuillez entrer l'adresse",
+      "description": "Description",
+      "description_placeholder": "Écrivez quelque chose...",
+      "close": "Fermer",
+      "save": "Enregistrer"
+    }
   },
+   "reconciliationReportPage": {
+    "empty_config_desc": "Pour voir le rapport de rapprochement, veuillez compléter la configuration dans les Paramètres.",
+    "go_to_settings": "Aller aux paramètres de configuration",
+    "alert_message": "Impossible d'extraire des données de plus de 7 jours (Pour un volume important de commandes, veuillez extraire les commandes d'une seule journée)",
+    "table":{
+      "title":" données de l'onglet de rapport de rapprochement",
+      "order_no":"Numéro de commande",
+      "transaction_id":"ID de transaction",
+      "email":"Email",
+      "payment_session":"Session de paiement",
+      "payment_source":"Source de paiement",
+      "amount":"Montant",
+      "order_amount":"Montant de la commande"
+     },
+     "download_csv": "Télécharger CSV"
+   },
+   "reconciliation_report_snackbar": {
+    "data_loaded": "Données du rapport de rapprochement chargées avec succès",
+    "invalid_date":"Impossible d'extraire des données de plus de 7 jours",
+    "file_error":"Échec du téléchargement du fichier. Veuillez réessayer.",
+     "report_downloaded":"Rapport de rapprochement téléchargé avec succès"
+   },
   "$vuetify": {
     "open": "Ouvrir",
     "close": "Fermer",
+    "doneBtn": "Terminé",
+    "search": "Rechercher",
+    "date_range_placeholder": "Sélectionner la plage de dates",
+    "no_data_available": "Aucune donnée disponible",
     "loading": "Chargement...",
     "noDataText": "Aucun enregistrement trouvé",
     "dataFooter": {
-      "itemsPerPageText": "Articles par page :",
+      "itemsPerPageText": "Articles par page:",
       "pageText": "{0}-{1} sur {2}",
       "itemsPerPageAll": "Tout",
       "firstPage": "Première page",
@@ -255,5 +315,250 @@
     "table": {
       "title": "Liste des paiements anticipés"
     }
+  },
+  "countries": {
+    "AF": "Afghanistan",
+    "AX": "Åland Islands",
+    "AL": "Albania",
+    "DZ": "Algeria",
+    "AS": "American Samoa",
+    "AD": "Andorra",
+    "AO": "Angola",
+    "AI": "Anguilla",
+    "AQ": "Antarctica",
+    "AG": "Antigua and Barbuda",
+    "AR": "Argentina",
+    "AM": "Armenia",
+    "AW": "Aruba",
+    "AU": "Australia",
+    "AT": "Austria",
+    "AZ": "Azerbaijan",
+    "BS": "Bahamas",
+    "BH": "Bahrain",
+    "BD": "Bangladesh",
+    "BB": "Barbados",
+    "BY": "Belarus",
+    "BE": "Belgium",
+    "BZ": "Belize",
+    "BJ": "Benin",
+    "BM": "Bermuda",
+    "BT": "Bhutan",
+    "BO": "Bolivia",
+    "BA": "Bosnia and Herzegovina",
+    "BW": "Botswana",
+    "BV": "Bouvet Island",
+    "BR": "Brazil",
+    "IO": "British Indian Ocean Territory",
+    "BN": "Brunei Darussalam",
+    "BG": "Bulgaria",
+    "BF": "Burkina Faso",
+    "BI": "Burundi",
+    "KH": "Cambodia",
+    "CM": "Cameroon",
+    "CA": "Canada",
+    "CV": "Cape Verde",
+    "KY": "Cayman Islands",
+    "CF": "Central African Republic",
+    "TD": "Chad",
+    "CL": "Chile",
+    "CN": "China",
+    "CX": "Christmas Island",
+    "CC": "Cocos (Keeling) Islands",
+    "CO": "Colombia",
+    "KM": "Comoros",
+    "CG": "Congo",
+    "CD": "Congo, The Democratic Republic of the",
+    "CK": "Cook Islands",
+    "CR": "Costa Rica",
+    "CI": "Cote D'Ivoire",
+    "HR": "Croatia",
+    "CU": "Cuba",
+    "CY": "Cyprus",
+    "CZ": "Czech Republic",
+    "DK": "Denmark",
+    "DJ": "Djibouti",
+    "DM": "Dominica",
+    "DO": "Dominican Republic",
+    "EC": "Ecuador",
+    "EG": "Egypt",
+    "SV": "El Salvador",
+    "GQ": "Equatorial Guinea",
+    "ER": "Eritrea",
+    "EE": "Estonia",
+    "ET": "Ethiopia",
+    "FK": "Falkland Islands (Malvinas)",
+    "FO": "Faroe Islands",
+    "FJ": "Fiji",
+    "FI": "Finland",
+    "FR": "France",
+    "GF": "French Guiana",
+    "PF": "French Polynesia",
+    "TF": "French Southern Territories",
+    "GA": "Gabon",
+    "GM": "Gambia",
+    "GE": "Georgia",
+    "DE": "Germany",
+    "GH": "Ghana",
+    "GI": "Gibraltar",
+    "GR": "Greece",
+    "GL": "Greenland",
+    "GD": "Grenada",
+    "GP": "Guadeloupe",
+    "GU": "Guam",
+    "GT": "Guatemala",
+    "GG": "Guernsey",
+    "GN": "Guinea",
+    "GW": "Guinea-Bissau",
+    "GY": "Guyana",
+    "HT": "Haiti",
+    "HM": "Heard Island and Mcdonald Islands",
+    "VA": "Holy See (Vatican City State)",
+    "HN": "Honduras",
+    "HK": "Hong Kong",
+    "HU": "Hungary",
+    "IS": "Iceland",
+    "IN": "India",
+    "ID": "Indonesia",
+    "IR": "Iran, Islamic Republic Of",
+    "IQ": "Iraq",
+    "IE": "Ireland",
+    "IM": "Isle of Man",
+    "IL": "Israel",
+    "IT": "Italy",
+    "JM": "Jamaica",
+    "JP": "Japan",
+    "JE": "Jersey",
+    "JO": "Jordan",
+    "KZ": "Kazakhstan",
+    "KE": "Kenya",
+    "KI": "Kiribati",
+    "KP": "Korea, Democratic People's Republic of",
+    "KR": "Korea, Republic of",
+    "KW": "Kuwait",
+    "KG": "Kyrgyzstan",
+    "LA": "Lao People's Democratic Republic",
+    "LV": "Latvia",
+    "LB": "Lebanon",
+    "LS": "Lesotho",
+    "LR": "Liberia",
+    "LY": "Libyan Arab Jamahiriya",
+    "LI": "Liechtenstein",
+    "LT": "Lithuania",
+    "LU": "Luxembourg",
+    "MO": "Macao",
+    "MK": "Macedonia, The Former Yugoslav Republic of",
+    "MG": "Madagascar",
+    "MW": "Malawi",
+    "MY": "Malaysia",
+    "MV": "Maldives",
+    "ML": "Mali",
+    "MT": "Malta",
+    "MH": "Marshall Islands",
+    "MQ": "Martinique",
+    "MR": "Mauritania",
+    "MU": "Mauritius",
+    "YT": "Mayotte",
+    "MX": "Mexico",
+    "FM": "Micronesia, Federated States of",
+    "MD": "Moldova, Republic of",
+    "MC": "Monaco",
+    "MN": "Mongolia",
+    "MS": "Montserrat",
+    "MA": "Morocco",
+    "MZ": "Mozambique",
+    "MM": "Myanmar",
+    "NA": "Namibia",
+    "NR": "Nauru",
+    "NP": "Nepal",
+    "NL": "Netherlands",
+    "AN": "Netherlands Antilles",
+    "NC": "New Caledonia",
+    "NZ": "New Zealand",
+    "NI": "Nicaragua",
+    "NE": "Niger",
+    "NG": "Nigeria",
+    "NU": "Niue",
+    "NF": "Norfolk Island",
+    "MP": "Northern Mariana Islands",
+    "NO": "Norway",
+    "OM": "Oman",
+    "PK": "Pakistan",
+    "PW": "Palau",
+    "PS": "Palestinian Territory, Occupied",
+    "PA": "Panama",
+    "PG": "Papua New Guinea",
+    "PY": "Paraguay",
+    "PE": "Peru",
+    "PH": "Philippines",
+    "PN": "Pitcairn",
+    "PL": "Poland",
+    "PT": "Portugal",
+    "PR": "Puerto Rico",
+    "QA": "Qatar",
+    "RE": "Reunion",
+    "RO": "Romania",
+    "RU": "Russian Federation",
+    "RW": "RWANDA",
+    "SH": "Saint Helena",
+    "KN": "Saint Kitts and Nevis",
+    "LC": "Saint Lucia",
+    "PM": "Saint Pierre and Miquelon",
+    "VC": "Saint Vincent and the Grenadines",
+    "WS": "Samoa",
+    "SM": "San Marino",
+    "ST": "Sao Tome and Principe",
+    "SA": "Saudi Arabia",
+    "SN": "Senegal",
+    "CS": "Serbia and Montenegro",
+    "SC": "Seychelles",
+    "SL": "Sierra Leone",
+    "SG": "Singapore",
+    "SK": "Slovakia",
+    "SI": "Slovenia",
+    "SB": "Solomon Islands",
+    "SO": "Somalia",
+    "ZA": "South Africa",
+    "GS": "South Georgia and the South Sandwich Islands",
+    "ES": "Spain",
+    "LK": "Sri Lanka",
+    "SD": "Sudan",
+    "SR": "Suriname",
+    "SJ": "Svalbard and Jan Mayen",
+    "SZ": "Swaziland",
+    "SE": "Sweden",
+    "CH": "Switzerland",
+    "SY": "Syrian Arab Republic",
+    "TW": "Taiwan, Province of China",
+    "TJ": "Tajikistan",
+    "TZ": "Tanzania, United Republic of",
+    "TH": "Thailand",
+    "TL": "Timor-Leste",
+    "TG": "Togo",
+    "TK": "Tokelau",
+    "TO": "Tonga",
+    "TT": "Trinidad and Tobago",
+    "TN": "Tunisia",
+    "TR": "Turkey",
+    "TM": "Turkmenistan",
+    "TC": "Turks and Caicos Islands",
+    "TV": "Tuvalu",
+    "UG": "Uganda",
+    "UA": "Ukraine",
+    "AE": "United Arab Emirates",
+    "GB": "United Kingdom",
+    "US": "United States",
+    "UM": "United States Minor Outlying Islands",
+    "UY": "Uruguay",
+    "UZ": "Uzbekistan",
+    "VU": "Vanuatu",
+    "VE": "Venezuela",
+    "VN": "Viet Nam",
+    "VG": "Virgin Islands, British",
+    "VI": "Virgin Islands, U.S.",
+    "WF": "Wallis and Futuna",
+    "EH": "Western Sahara",
+    "YE": "Yemen",
+    "ZM": "Zambia",
+    "ZW": "Zimbabwe"
   }
 }
